# plot-py-repo

./: .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  repo_history.csv
.claude/: settings.json
.claude/commands/: askme.md  coderabbit.md  commit.md  post-merge.md
demo_output/: repo_history.csv
docs/: 1_idea_data.md  2_make_graphs.md  code-review.md
docs/ai-ryan-carson/: create-prd.md  generate-tasks.md  process-task-list.md
docs/architecture/: arch-01-initial.md  arch-02.md  arch-03.md
docs/orig/: 2_make_graphs.md
docs/prompts/: 1_idea_data.md  2_make_graphs.md
docs/reference/: plotly_theming.md
docs/wip/: 01_make_flat.md  DONE__make_flat.md  NOTES__nice_tests.md  clearly_see.md  improve_ux.md  make_flat_01.md  make_flat_02.md  testing_eval.md
docs/wip__done/: DONE__improve_ux.md  DONE__make_flat.md  DONE__see_clear.md
example_repo/: repo_history.csv
src/plot_py_repo/: __init__.py  chart_breakdown.py  chart_evolution.py  chart_evolution_commit.py  chart_modules.py  cli.py  count_lines.py  git_history.py  theme.py  visualise.py
src/viz_python_repo/: cli.py  git_history.py  plot_evolution.py  plot_modules.py
tests/: __init__.py  test_chart_breakdown.py  test_chart_evolution.py  test_chart_evolution_commit.py  test_chart_modules.py  test_cli.py  test_count_lines.py  test_git_history.py  test_theme.py  test_theme_plotly.py  test_visualise.py
