# =================================
# Build System
# =================================

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"


# =================================
# Project Metadata & Configuration
# =================================

[project]
name = "plot-py-repo"
version = "0.1.0"
description = "Visualise Python repository evolution through Git history"
readme = "README.md"
authors = [{ name = "Michelle", email = "your.email@example.com" }]
requires-python = ">=3.13"
dependencies = [        # runtime
    "kaleido>=1.1.0",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
]

# CLI entry points
[project.scripts]
plot-py-repo = "plot_py_repo.cli:main"

# Development dependencies
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

# =================================
# Package Manager Configuration
# =================================

# Allow PyPI nightly builds (❌ DISABLED to use stable releases only)
#[tool.uv]
#prerelease = "allow"


# =================================
# Pytest Configuration
# =================================

[tool.pytest.ini_options]
markers = [
    "slow: tests that generate images (≈3s per image)"
]

# =================================
# Pyright Type Checking
# =================================

[tool.pyright]
# Type Checker is needed as Ruff is only a linter: https://docs.astral.sh/ruff/faq/
# For Cursor (Cursor Pyright extension), for VSCode (Microsoft Pylance)
# Cursor Pyright forks BasedPyright, some lint rules overlap with Ruff, causes dupe errors

typeCheckingMode = "standard" # Cursor Pyright default
pythonVersion = "3.13"

# Disable Basedpyright rules that duplicate Ruff
reportUnusedImport = false      # Ruff F401 handles it
reportUnusedVariable = false    # Ruff F841 handles it
reportDuplicateImport = false   # Ruff F811 handles it
reportUnusedParameter = false   # Ruff ARG001 handles it

# =================================
# Ruff Linter Configuration
# =================================

[tool.ruff]
# Strictest ruff settings
line-length = 90
target-version = "py313"

[tool.ruff.lint]
# Enable all available rules
select = ["ALL"]
# Only ignore rules that are incompatible or overly pedantic
ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicitly concatenated string literals on one line (conflicts with formatter)
    "T201",    # Print found (allow print statements)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "S607",    # Starting process with partial executable path (git commands in tests)
]
